nb to fetch the dist mesh

--- a/code/5_temp_get_names.ipynb
+++ b/code/5_temp_get_names.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VAE"
+    "# Roy's testing app"
    ]
   },
   {
@@ -102,8 +102,326 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explore mesh"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "       pmid last_author_country   PI_IDS last_author_name  \\\n0  19810465                  PA  8352708    Madabhushi, A   \n1  26167385                  PA  8352708    Madabhushi, A   \n\n                                             authors   doi  \\\n0  [{'forename': 'Pallavi', 'affiliation': 'Depar...  None   \n1  [{'forename': 'Akshay', 'affiliation': 'Depart...  None   \n\n                       journal_name language  \\\n0                   Medical physics      eng   \n1  Journal of pathology informatics      eng   \n\n                                         last_author last_author_email  \\\n0                                               None              None   \n1  {'affiliation': 'Department of Biomedical Engi...              None   \n\n   last_author_id                             last_author_inst  \\\n0       2517051.0                                         None   \n1             NaN  Rutgers, The State University of New Jersey   \n\n                                                mesh  \\\n0  [Humans, Linear Models, Male, Pilot Projects, ...   \n1                                               None   \n\n                                          mesh_major  pub_year  \\\n0  [Algorithms, Cluster Analysis, Diagnosis, Comp...    2009.0   \n1                                               None    2015.0   \n\n                                               title  \n0  A hierarchical spectral clustering and nonline...  \n1  Content-based image retrieval of digitized his...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pmid</th>\n      <th>last_author_country</th>\n      <th>PI_IDS</th>\n      <th>last_author_name</th>\n      <th>authors</th>\n      <th>doi</th>\n      <th>journal_name</th>\n      <th>language</th>\n      <th>last_author</th>\n      <th>last_author_email</th>\n      <th>last_author_id</th>\n      <th>last_author_inst</th>\n      <th>mesh</th>\n      <th>mesh_major</th>\n      <th>pub_year</th>\n      <th>title</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>19810465</td>\n      <td>PA</td>\n      <td>8352708</td>\n      <td>Madabhushi, A</td>\n      <td>[{'forename': 'Pallavi', 'affiliation': 'Depar...</td>\n      <td>None</td>\n      <td>Medical physics</td>\n      <td>eng</td>\n      <td>None</td>\n      <td>None</td>\n      <td>2517051.0</td>\n      <td>None</td>\n      <td>[Humans, Linear Models, Male, Pilot Projects, ...</td>\n      <td>[Algorithms, Cluster Analysis, Diagnosis, Comp...</td>\n      <td>2009.0</td>\n      <td>A hierarchical spectral clustering and nonline...</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>26167385</td>\n      <td>PA</td>\n      <td>8352708</td>\n      <td>Madabhushi, A</td>\n      <td>[{'forename': 'Akshay', 'affiliation': 'Depart...</td>\n      <td>None</td>\n      <td>Journal of pathology informatics</td>\n      <td>eng</td>\n      <td>{'affiliation': 'Department of Biomedical Engi...</td>\n      <td>None</td>\n      <td>NaN</td>\n      <td>Rutgers, The State University of New Jersey</td>\n      <td>None</td>\n      <td>None</td>\n      <td>2015.0</td>\n      <td>Content-based image retrieval of digitized his...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "me=get_mesh_vec.MeshEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "32823\n"
+    }
+   ],
+   "source": [
+    "all_mesh=set() \n",
+    "for mm in df[:30000]['mesh'].to_list():\n",
+    "    try:\n",
+    "        for m in mm:\n",
+    "           # print(m)\n",
+    "            all_mesh.add(m)\n",
+    "    except:\n",
+    "        pass\n",
+    "print(len(all_mesh))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "me.set_mesh_freq(list(all_mesh))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df2=df[:10000]\n",
+    "df2=df2.dropna(subset=['mesh']).reset_index()\n",
+    "df2['vec']=df2['mesh'].apply(lambda x: me.get_mesh_emb(x)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "   index      pmid last_author_country   PI_IDS last_author_name  \\\n0      0  19810465                  PA  8352708    Madabhushi, A   \n1      3  25958195                  PA  8352708    Madabhushi, A   \n\n                                             authors  \\\n0  [{'forename': 'Pallavi', 'affiliation': 'Depar...   \n1  [{'forename': 'Jun', 'affiliation': 'Jiangsu K...   \n\n                                 doi  \\\n0                               None   \n1  10.1016/j.compmedimag.2015.04.002   \n\n                                        journal_name language  \\\n0                                    Medical physics      eng   \n1  Computerized medical imaging and graphics : th...      eng   \n\n                                         last_author last_author_email  \\\n0                                               None              None   \n1  {'affiliation': 'Department of Biomedical Engi...              None   \n\n   last_author_id                 last_author_inst  \\\n0       2517051.0                             None   \n1       1576937.0  Case Western Reserve University   \n\n                                                mesh  \\\n0  [Humans, Linear Models, Male, Pilot Projects, ...   \n1  [Coloring Agents, Female, Humans, Models, Stat...   \n\n                                          mesh_major  pub_year  \\\n0  [Algorithms, Cluster Analysis, Diagnosis, Comp...    2009.0   \n1  [Algorithms, Breast/pathology, Color, Image En...    2015.0   \n\n                                               title  \\\n0  A hierarchical spectral clustering and nonline...   \n1  Sparse Non-negative Matrix Factorization (SNMF...   \n\n                                                 vec  \n0  [29.13949110878572, 39.9266187284969, 39.35088...  \n1  [20.78959039746426, 16.97823482755982, 5.31089...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>pmid</th>\n      <th>last_author_country</th>\n      <th>PI_IDS</th>\n      <th>last_author_name</th>\n      <th>authors</th>\n      <th>doi</th>\n      <th>journal_name</th>\n      <th>language</th>\n      <th>last_author</th>\n      <th>last_author_email</th>\n      <th>last_author_id</th>\n      <th>last_author_inst</th>\n      <th>mesh</th>\n      <th>mesh_major</th>\n      <th>pub_year</th>\n      <th>title</th>\n      <th>vec</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>0</td>\n      <td>19810465</td>\n      <td>PA</td>\n      <td>8352708</td>\n      <td>Madabhushi, A</td>\n      <td>[{'forename': 'Pallavi', 'affiliation': 'Depar...</td>\n      <td>None</td>\n      <td>Medical physics</td>\n      <td>eng</td>\n      <td>None</td>\n      <td>None</td>\n      <td>2517051.0</td>\n      <td>None</td>\n      <td>[Humans, Linear Models, Male, Pilot Projects, ...</td>\n      <td>[Algorithms, Cluster Analysis, Diagnosis, Comp...</td>\n      <td>2009.0</td>\n      <td>A hierarchical spectral clustering and nonline...</td>\n      <td>[29.13949110878572, 39.9266187284969, 39.35088...</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>3</td>\n      <td>25958195</td>\n      <td>PA</td>\n      <td>8352708</td>\n      <td>Madabhushi, A</td>\n      <td>[{'forename': 'Jun', 'affiliation': 'Jiangsu K...</td>\n      <td>10.1016/j.compmedimag.2015.04.002</td>\n      <td>Computerized medical imaging and graphics : th...</td>\n      <td>eng</td>\n      <td>{'affiliation': 'Department of Biomedical Engi...</td>\n      <td>None</td>\n      <td>1576937.0</td>\n      <td>Case Western Reserve University</td>\n      <td>[Coloring Agents, Female, Humans, Models, Stat...</td>\n      <td>[Algorithms, Breast/pathology, Color, Image En...</td>\n      <td>2015.0</td>\n      <td>Sparse Non-negative Matrix Factorization (SNMF...</td>\n      <td>[20.78959039746426, 16.97823482755982, 5.31089...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 241
+    }
+   ],
+   "source": [
+    "df2.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 29.13949111,  39.92661873,  39.35088718,   0.12615154,\n        21.56074102,   8.71754868, -21.21081918,  18.47010033,\n       -39.54505848, -54.06960271,  25.87834466,  19.16984295,\n        21.32953834,  36.98004787, -12.56056136,  -0.87229909,\n        54.24082836,  27.7439268 , -22.10145443, -63.39352139,\n        -3.18082552,  -5.94109105,  -2.3948647 ,  -4.82997672,\n        32.57842848,   2.54820518,   7.31662033,   5.21720816,\n        26.6369901 ,  47.97403249,  41.23356382,  21.74053248,\n         3.22307615,   7.21328422,  -3.98735092,  49.11359511,\n        13.07235776,  25.17407187, -17.82834916,  35.19943614,\n        18.94347961, -16.67326448,  -2.62297873, -21.94679025,\n       -55.42745706, -55.31659393,  45.51696778,  16.25974672,\n       -10.89999553, -18.77786031, -65.34674194, -19.55726546,\n        18.49505464, -49.1489508 , -32.46926649,  -4.24551345,\n       -37.46968165, -27.30925795,  14.80077169, -15.67037135,\n       -55.60852515,  13.20683177,  21.80382753, -39.02982047])"
+     },
+     "metadata": {},
+     "execution_count": 242
+    }
+   ],
+   "source": [
+    "X=df2.vec.to_list()\n",
+    "ids=df2.index.to_list()\n",
+    "X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "from sklearn.neighbors import NearestNeighbors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X=[[1,2,3],[4,5,6],[7,6,7]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0.00000000e+00, 1.72509626e+02, 1.22562233e+02, ...,\n        3.28578726e+02, 2.89234747e+02, 3.37782183e+02],\n       [1.72509626e+02, 0.00000000e+00, 9.35952608e+01, ...,\n        3.07235273e+02, 2.71045752e+02, 3.37543523e+02],\n       [1.22562233e+02, 9.35952608e+01, 0.00000000e+00, ...,\n        3.13706893e+02, 2.76305516e+02, 3.48770533e+02],\n       ...,\n       [3.28578726e+02, 3.07235273e+02, 3.13706893e+02, ...,\n        0.00000000e+00, 1.99437554e+02, 3.01290008e+02],\n       [2.89234747e+02, 2.71045752e+02, 2.76305516e+02, ...,\n        1.99437554e+02, 9.34406182e-06, 2.93409341e+02],\n       [3.37782183e+02, 3.37543523e+02, 3.48770533e+02, ...,\n        3.01290008e+02, 2.93409341e+02, 7.62939453e-06]])"
+     },
+     "metadata": {},
+     "execution_count": 243
+    }
+   ],
+   "source": [
+    "dist_matrix=euclidean_distances(X, X)\n",
+    "dist_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(8532, 8532)"
+     },
+     "metadata": {},
+     "execution_count": 244
+    }
+   ],
+   "source": [
+    "dist_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(7972, 8210)"
+     },
+     "metadata": {},
+     "execution_count": 245
+    }
+   ],
+   "source": [
+    "ind = np.unravel_index(np.argmax(dist_matrix, axis=None), dist_matrix.shape)  # returns a tuple\n",
+    "ind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1052.4606518672608"
+     },
+     "metadata": {},
+     "execution_count": 246
+    }
+   ],
+   "source": [
+    "dist_matrix[ind[0]][ind[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(7972, 8210)"
+     },
+     "metadata": {},
+     "execution_count": 247
+    }
+   ],
+   "source": [
+    "ids[ind[0]], ids[ind[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[['Amygdala/metabolism',\n  'Animals',\n  'Base Sequence',\n  'Behavior, Animal/physiology',\n  'Drosophila melanogaster/genetics',\n  'Female',\n  'Gene Deletion',\n  'Locomotion/genetics',\n  'Male',\n  'Mice',\n  'Mice, Inbred AKR',\n  'Mice, Inbred BALB C',\n  'Mice, Inbred C3H',\n  'Mice, Inbred C57BL',\n  'Mice, Inbred DBA',\n  'Mice, Transgenic',\n  'Sequence Analysis, DNA',\n  'Sex Factors',\n  'Sleep/genetics',\n  'Suprachiasmatic Nucleus/metabolism',\n  'Vestibular Function Tests'],\n ['Animals',\n  'Cells, Cultured',\n  'Corpus Striatum/chemistry',\n  'Dopamine/analysis',\n  'Female',\n  'Fluorescent Dyes/analysis',\n  'HEK293 Cells',\n  'Humans',\n  'Male',\n  'Mice',\n  'Mice, 129 Strain',\n  'Mice, Inbred C57BL',\n  'Mice, Knockout',\n  'Mice, Transgenic',\n  'Neurotransmitter Agents/analysis',\n  'Organ Culture Techniques',\n  'Presynaptic Terminals/chemistry',\n  'Synaptic Vesicles/chemistry']]"
+     },
+     "metadata": {},
+     "execution_count": 253
+    }
+   ],
+   "source": [
+    "df3=df2.iloc[[7972, 978]][['pmid','mesh']]\n",
+    "df3.mesh.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_ = np.array(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[   0, 1812, 3019, ..., 4074, 7000, 1808],\n       [   1, 4534,  777, ..., 3812, 4253,  653],\n       [   2,  936, 8290, ..., 7702, 3418, 2015],\n       ...,\n       [8529, 1232, 4469, ..., 7464, 1116, 8413],\n       [8530, 5206, 5006, ..., 2211, 2567, 1216],\n       [8531, 1055, 5049, ..., 2651, 5459, 7556]])"
+     },
+     "metadata": {},
+     "execution_count": 250
+    }
+   ],
+   "source": [
+    "nbrs = NearestNeighbors(n_neighbors=100, algorithm='auto').fit(X)\n",
+    "distances, indices = nbrs.kneighbors(X)\n",
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([7972, 4267,  978, 8353, 8078, 7654, 6681, 8387, 1732, 5972, 7857,\n         68, 7855, 3475,  281, 7693, 7327, 7291, 2296, 3169,  972, 4168,\n       7068, 6515, 7292, 5209, 8081, 7467, 6362, 6822, 4980, 5434, 7648,\n       3898, 6195, 1119, 5036, 5013, 3051, 7228, 4721, 7516, 6112, 7528,\n       5645, 5677, 7860, 8090, 6033, 5320, 3171, 4019, 3468, 1002, 3939,\n       4986, 4046, 7312, 7123, 8015, 7126, 2398, 6848, 2005, 5211, 6850,\n       5185, 6811, 3596, 3114, 4765, 2310, 3134, 4038, 8361, 5978, 6595,\n       8246, 5962, 4048, 8188, 3305, 7193, 6081, 7616, 4532, 7100, 6847,\n       6844, 6839,  536, 6084, 4192, 7701, 1192, 7309, 6723,  561, 1782,\n       1961])"
+     },
+     "metadata": {},
+     "execution_count": 251
+    }
+   ],
+   "source": [
+    "indices[7972]#7972, 8210"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_A=df2.iloc[indices[7972]].pmid.to_list()\n",
+    "group_B=df2.iloc[indices[8210]].pmid.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({'A': group_B, 'B' :group_A}).to_csv('mesh_paper_groups_pmid.csv')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -140,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,20 +476,20 @@
       "text/plain": "0                      [Tiwari, P, Rosen, M, Madabhushi, A]\n1                     [Sridhar, A, Doyle, S, Madabhushi, A]\n2          [Tiwari, P, Danish, SF, Jiang, B, Madabhushi, A]\n3         [Xu, J, Xiang, L, Wang, G, Ganesan, S, Feldman...\n4            [Basavanhally, A, Viswanath, S, Madabhushi, A]\n                                ...                        \n196566    [Choudhary, V, Olala, LO, Kaddour-Djebbar, I, ...\n196567    [Qureshi, H, Genescà, M, Fritts, L, McChesney,...\n196568    [Grummon, AH, Heaney, CA, Dellinger, WA, Wilki...\n196569                  [Buck, KJ, Walter, NA, Denmark, DL]\n196570    [Braun, LR, Fisk, WA, Lev-Tov, H, Kirsner, RS,...\nName: names, Length: 196571, dtype: object"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 8
     }
    ],
    "source": [
-    "df['names'].to_list()"
+    "df['names']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(df['names'].to_list()).to_csv('co_authors.json', orient='records')"
+    "pd.DataFrame(df['names']).to_pickle('co_authors.pkl')"
    ]
   },
   {
@@ -1720,7 +2038,7 @@
   "kernelspec": {
    "display_name": "Python 3.6.8 64-bit ('nlp': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1594062773130"
+   "name": "python_defaultSpec_1594281867594"
   },
   "language_info": {
    "codemirror_mode": {
